# wagtail-webp

./: .gitignore  pyproject.toml  runtests.py
tests/: settings.py  test_image_operations.py  test_integration.py  test_willow.py
wagtail_webp/: __init__.py  apps.py  image_operations.py  wagtail_hooks.py
