[tool.poetry]
name = "wagtail-webp"
version = "0.1.0"
description = ""
authors = ["Mitchel Cabuloy <mixxorz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Wagtail = "^2.0"
willow = "^1.1"
Pillow = "^5.3"
Wand = "^0.4.5"

[tool.poetry.dev-dependencies]
ipdb = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
